<resources>
    <string name="app_name">SensorPoller</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="yes">YES</string>
    <string name="no" translatable="false">NO</string>

    <string name="accelerometer" translatable="false">Accelerometer</string>
    <string name="gyroscope" translatable="false">Gyroscope</string>
    <string name="light" translatable="false">Light sensor</string>
    <string name="proximity" translatable="false">Proximity</string>
    <string name="microphone" translatable="false">Microphone</string>
    <string name="GPS" translatable="false">GPS</string>
    <string name="wifi" translatable="false">WiFi</string>
    <string name="camera" translatable="false">Camera &amp; Microphone</string>
    <string name="touch" translatable="false">Touch events</string>

    <string name="running">Running</string>
    <string name="paused">Paused</string>
    <string name="start" translatable="false">Start</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="upload" translatable="false">Upload</string>

    <string name="filesToUpload" translatable="false">Please select the files to upload</string>
    <string name="uploadConfirmation">Are you sure you want to upload the files?</string>
    <string name="filesize" translatable="false">Filesize: </string>
    <string name="fileUpload" translatable="false">File Upload</string>
    <string name="uploadProgress">Upload in progress</string>
    <string name="uploadCompleted">Upload completed</string>

    <string name="drawTitle">Permission required</string>
    <string name="drawBody">Please give SensorPoller the permission to display over other apps</string>
    <string name="batteryBody">Please remove battery optimization from SensorPoller, so it won\'t be blocked while running in the background</string>

    <string name="channel_name" translatable="false">Notificaton_channel</string>
    <string name="channel_description" translatable="false">Upload notification</string>

    <string name="noPermissions">Missing permissions to run</string>

    <string name="whatTitle">What this app does:</string>
    <string name="whatBody">Once you click \"Start\", this app collects data from your phone\'s gyroscope, accelerometer, light sensor, proximity sensor, microphone, touch events on the touchscreen
        and if your face is visibile from the front camera. You can stop the data collection at any time by pressing \"Stop\". The microphone records sound for 2 seconds every 10 seconds. The camera takes a photo every 10 seconds, scans for
        a face, and saves a 0 if it doesn\'t see any faces, 1 if it does. No photos are saved. When you decide to upload your data, it is saved anonomously on an online server
        for data collection. We have no way of recognising who the data belongs to, once it is stored on the online server.</string>
</resources>
